--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ permissions:
   contents: write
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - master
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
